syntax = "proto3";

package v1;

option go_package = "./v1";

import "google/protobuf/wrappers.proto";

service IpamService {
    rpc Create(PrefixCreateRequest) returns (PrefixResponse);
    rpc Delete(PrefixDeleteRequest) returns (PrefixResponse);
    rpc Get(PrefixGetRequest) returns (PrefixResponse);
    rpc AcquireChild(AcquireChildRequest) returns (PrefixResponse);
    rpc ReleaseChild(ReleaseChildRequest) returns (PrefixResponse);
    rpc AcquireIP(IPAcquireRequest) returns (IPResponse);
    rpc ReleaseIP(IPReleaseRequest) returns (IPResponse);
}

message Prefix {
    string cidr = 1;
    google.protobuf.StringValue namespace = 2;
	string parent_cidr = 3;
}
message PrefixResponse {
    Prefix prefix = 1;
}
message PrefixCreateRequest {
    string cidr = 1;
    google.protobuf.StringValue namespace = 2;
}
message PrefixDeleteRequest {
    string cidr = 1;
    google.protobuf.StringValue namespace = 2;
}
message PrefixGetRequest {
    string cidr = 1;
    google.protobuf.StringValue namespace = 2;
}
message AcquireChildRequest {
    string cidr = 1;
    uint32 length = 2;
    google.protobuf.StringValue namespace = 3;
}
message ReleaseChildRequest {
    string cidr = 1;
    google.protobuf.StringValue namespace = 2;
}

message IP {
    string ip = 1;
    google.protobuf.StringValue namespace = 2;
    string parent_prefix = 3;
}
message IPResponse {
    IP ip = 1;
}
message IPAcquireRequest {
    string prefix_cidr = 1;
    google.protobuf.StringValue namespace = 2;
    google.protobuf.StringValue ip = 3;
}
message IPReleaseRequest {
    string prefix_cidr = 1;
    google.protobuf.StringValue namespace = 2;
    string ip = 3;
}